<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OrderActivity">

    <TextView
        android:id="@+id/mainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/headerOrder"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/buttonAcceptOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/orderInfoMargin"
                android:text="@string/totalPrice"
                android:textColor="@android:color/black"
                android:textSize="@dimen/bitTextSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textTotalPriceValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/orderInfoMargin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textSize="@dimen/bitTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textTotalPrice"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="10000" />

            <TextView
                android:id="@+id/textTotalCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/orderInfoMargin"
                android:text="@string/totalCount"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/smallTextSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTotalPrice" />

            <TextView
                android:id="@+id/textTotalCountValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/orderInfoMargin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/smallTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textTotalCount"
                app:layout_constraintTop_toBottomOf="@+id/textTotalPrice"
                tools:text="4" />

            <TextView
                android:id="@+id/textTotalDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/orderInfoMargin"
                android:text="@string/totalDiscount"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/smallTextSize"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTotalCount" />

            <TextView
                android:id="@+id/textTotalDiscountValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/orderInfoMargin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/smallTextSize"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textTotalDiscount"
                app:layout_constraintTop_toBottomOf="@+id/textTotalCount"
                tools:text="123" />

            <EditText
                android:id="@+id/nameFirstField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/nameFirstField"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTotalDiscount" />

            <EditText
                android:id="@+id/nameLastField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nameLastField"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameFirstField" />

            <EditText
                android:id="@+id/nameFatherField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nameFatherField"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameLastField" />

            <EditText
                android:id="@+id/phoneField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:ems="10"
                android:hint="@string/phoneField"
                android:importantForAutofill="no"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameFatherField" />

            <TextView
                android:id="@+id/hintPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintPhoneNumber"
                android:textColor="@color/grayText"
                android:textSize="@dimen/smallTextSize"
                app:layout_constraintBottom_toBottomOf="@+id/phoneField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneField" />

            <RadioGroup
                android:id="@+id/paymentGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hintPhoneNumber">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paymentCard" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paymentCash" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonAcceptOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/orderAcceptButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonOrderGoBack"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/buttonOrderGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>